add stylings and adjust HTML structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Skye Nguyen</title>
     <link href="css/bootstrap.css" rel="stylesheet" text="css/text" media="all" />
     <link href="css/styles.css" rel="stylesheet" text="css/text" media="all" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Tinos" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Tinos|Flamenco|Sofia" rel="stylesheet">
 </head>
 
 <body>
@@ -43,14 +43,16 @@
             <div class="card-body">
                 <img src="img/profile.jpg" alt="profile picture" width=50% id="profile" />
                 <div id="about-me-float">
-                    <p> I am originally from Viet Nam and have been living in the United States for about seven years now. I spent five of these years living and studying in northern Indiana before moving to Seattle last summer.
-                        I consider myself a <em>diversity promotor</em>, a reliable teammate, and a
+                    <p> I am originally from Viet Nam and have been living in the United States for about seven years now. I
+                        spent five of these years living and studying in northern Indiana before moving to Seattle last summer.
+                        I consider myself a
+                        <em>diversity promotor</em>, a reliable teammate, and a
                         <strong>creative problem solver</strong>.
                     </p>
                     <p>I am currently attending Epicodus C# and React track full-time, which will commence in February, 2019.</p>
-                    
+
                     <ol>
-                            <span>Short-term Goals</span>
+                        <span>Short-term Goals</span>
                         <li>Improve my programming skills</li>
                         <li>Explore and apply programming best practices</li>
                         <li>Establish meaningful relationships with people of common interests</li>
@@ -65,16 +67,13 @@
             <div class="card-body">
                 <div class="row title-row">
                     <div class="col-md-3">
-                        <h6>Title
-                            <h6>
+                        <h6>Title</h6>
                     </div>
                     <div class="col-md-5">
-                        <h6>Description
-                            <h6>
+                        <h6>Description</h6>
                     </div>
                     <div class="col-md-4">
-                        <h6>Link/Demo
-                            <h6>
+                        <h6>Link/Demo</h6>
                     </div>
                 </div>
                 <div class="row">
@@ -89,44 +88,46 @@
                     </div>
                 </div>
                 <div class="row">
-                        <div class="col-md-3">
-                            <span>Magic 8 Ball</span>
-                        </div>
-                        <div class="col-md-5">
-                            <p>A responsive magic-8-ball that gives answer when a question is entered, built using HTML, CSS and JavaScript.</p>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="https://skye.dames.es/magic-8-ball/"> Live Demo</a>
-                        </div>
+                    <div class="col-md-3">
+                        <span>Magic 8 Ball</span>
                     </div>
+                    <div class="col-md-5">
+                        <p>A responsive magic-8-ball that gives answer when a question is entered, built using HTML, CSS and
+                            JavaScript.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="https://skye.dames.es/magic-8-ball/"> Live Demo</a>
+                    </div>
+                </div>
                 <div class="row">
-                        <div class="col-md-3">
-                            <span>Election Result Map</span>
-                        </div>
-                        <div class="col-md-5">
-                            <p>A responsive election map based on the electoral college system, built using HTML, CSS and JavaScript.</p>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="https://github.com/sn31/election-map"> GitHub Repository</a>
-                        </div>
+                    <div class="col-md-3">
+                        <span>Election Result Map</span>
                     </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <span>Cat Clock</span>
-                        </div>
-                        <div class="col-md-5">
-                            <p>A responsive clock that changes the main cat picture based on the time of the visit.</p>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="https://skye.dames.es/lolcat-clock/">Live Demo</a>
-                        </div>
+                    <div class="col-md-5">
+                        <p>A responsive election map based on the electoral college system, built using HTML, CSS and JavaScript.</p>
                     </div>
+                    <div class="col-md-4">
+                        <a href="https://github.com/sn31/election-map"> GitHub Repository</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <span>Cat Clock</span>
+                    </div>
+                    <div class="col-md-5">
+                        <p>A responsive clock that changes the main cat picture based on the time of the visit.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="https://skye.dames.es/lolcat-clock/">Live Demo</a>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-3">
                         <span>Animal Shelter</span>
                     </div>
                     <div class="col-md-5">
-                       <p>A static one-page website of a mock animal shelter, built using HTML and CSS.</p>
+                        <p>A static one-page website of a mock animal shelter, built using HTML and CSS.</p>
                     </div>
                     <div class="col-md-4">
                         <a href="https://github.com/sn31/animal-shelter/tree/navbar"> GitHub Repository</a>
@@ -150,16 +151,16 @@
                 <h3 class="card-title">Background</h3>
             </div>
             <div class="card-body">
-                <div class="row">
-                    <div class="col-md-3">
+                <div class="row row-bg">
+                    <div class="col-md-3 col-bg">
                         <span class="glyphicons glyphicons-education">Education</span>
                     </div>
                     <div class="col-md-9">
                         Bachelor of Science in Chemical Engineering with a concentration in Polymers.
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-3">
+                <div class="row row-bg">
+                    <div class="col-md-3 col-bg">
                         <span>Previous Experience</span>
                     </div>
                     <div class="col-md-9">
@@ -170,20 +171,24 @@
                         </ul>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-3">
+                <div class="row row-bg">
+                    <div class="col-md-3 col-bg">
                         <span>Why I code</span>
                     </div>
                     <div class="col-md-9">
-                        <span>rfbwuierfwuierfweurf</span>
+                        <span>I code to solve problems that either myself or other people around me run into.</span>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-3">
+                <div class="row row-bg" id="row-bg-last">
+                    <div class="col-md-3 col-bg">
                         <span>Awards</span>
                     </div>
                     <div class="col-md-9">
-                        <span>rfbwuierfwuierfweurf</span>
+                        <ul>
+                            <li>Winner of the A. McLaren White Award for First Prize in the AIChE Design Competition (2017)</li>
+                            <li>Winner of the Inherently Safer Design Award in the AIChE Design Competition (2017)</li>
+                            <li>Winner of the American Chemical Society Rubber Scholarship (2015 &amp; 2016))</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -195,27 +200,31 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <span>Dota 2</span><br>
+                    <span>Dota 2</span>
+                    <br>
                     <img class="hobbies" src="img/dota.jpg" alt="dota 2 wallpaper" width=50%/>
                 </div>
                 <div class="col-md-6">
-                    <span>Makeup</span><br>
+                    <span>Makeup</span>
+                    <br>
                     <img class="hobbies" src="img/makeup-unsplash.jpg" alt="makeup bag" width=50%/>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <span>OrangeTheory Fitness</span><br>
+                    <span>OrangeTheory Fitness</span>
+                    <br>
                     <img class="hobbies" src="img/otf-logo.png" alt="otf logo" width=50%/>
                 </div>
                 <div class="col-md-6">
-                    <span>Hiking</span><br>
+                    <span>Hiking</span>
+                    <br>
                     <img class="hobbies" src="img/hiking.jpg" alt="hiking" width=50%/>
                 </div>
             </div>
         </div>
     </main>
-   
+
     <footer>
 
     </footer>
