--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </div>
         </header>
     </div>
+    <!-- <img src="img/profile.jpg" alt="profile picture" width=50% id="profile" /> -->
 
     <main class="container">
         <div class="card" id="about-me">
@@ -212,9 +213,9 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <span>OrangeTheory Fitness</span>
+                    <span>Orangetheory Fitness</span>
                     <br>
-                    <img class="hobbies" src="img/otf-logo.png" alt="otf logo" width=50%/>
+                    <img class="hobbies" src="img/otf-logo.jpg" alt="otf logo" width=50%/>
                 </div>
                 <div class="col-md-6">
                     <span>Hiking</span>
@@ -224,10 +225,10 @@
             </div>
         </div>
     </main>
-
     <footer>
-
+        <span>Created by Skye Nguyen, 2018</span>
     </footer>
+
 </body>
 
 </html>
