add final stylings

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
                         <strong>creative problem solver</strong>.
                     </p>
                     <p>I am currently attending Epicodus C# and React track full-time, which will commence in February, 2019.</p>
-
-                    <ol>
-                        <span>Short-term Goals</span>
+                    
+                    <ol><span>Short-term Goals</span>
                         <li>Improve my programming skills</li>
                         <li>Explore and apply programming best practices</li>
                         <li>Establish meaningful relationships with people of common interests</li>
@@ -154,7 +153,7 @@
             <div class="card-body">
                 <div class="row row-bg">
                     <div class="col-md-3 col-bg">
-                        <span class="glyphicons glyphicons-education">Education</span>
+                        <span>Education</span>
                     </div>
                     <div class="col-md-9">
                         Bachelor of Science in Chemical Engineering with a concentration in Polymers.
@@ -188,7 +187,7 @@
                         <ul>
                             <li>Winner of the A. McLaren White Award for First Prize in the AIChE Design Competition (2017)</li>
                             <li>Winner of the Inherently Safer Design Award in the AIChE Design Competition (2017)</li>
-                            <li>Winner of the American Chemical Society Rubber Scholarship (2015 &amp; 2016))</li>
+                            <li>Winner of the American Chemical Society Rubber Scholarship (2015 &amp; 2016)</li>
                         </ul>
                     </div>
                 </div>
