--- a/index.html
+++ b/index.html
@@ -224,52 +224,60 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" id="interest">
                     <div class="card-header">
-                        <h3 class="card-title">Interests</h3>
+                        <h3 class="card-title">Place Holder</h3>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <span>Open AI</span>
+                            <span>Place holder</span>
                             <br>
-                            <img class="hobbies" src="img/dota.jpg" alt="dota 2 wallpaper" width=50%/>
+                            <!-- <img class="hobbies" src="img/dota.jpg" alt="dota 2 wallpaper" width=50%/> -->
                         </div>
                         <div class="col-md-6">
-                            <span>Makeup</span>
+                            <span>Place holder</span>
                             <br>
-                            <img class="hobbies" src="img/makeup-unsplash.jpg" alt="makeup bag" width=50%/>
+                            <!-- <img class="hobbies" src="img/makeup-unsplash.jpg" alt="makeup bag" width=50%/> -->
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <span>Orangetheory Fitness</span>
+                            <span>Place holder</span>
                             <br>
-                            <img class="hobbies" src="img/otf-logo.jpg" alt="otf logo" width=50%/>
+                            <!-- <img class="hobbies" src="img/otf-logo.jpg" alt="otf logo" width=50%/> -->
                         </div>
                         <div class="col-md-6">
-                            <span>Hiking</span>
+                            <span>Place holder</span>
                             <br>
-                            <img class="hobbies" src="img/hiking.jpg" alt="hiking" width=50%/>
+                            <!-- <img class="hobbies" src="img/hiking.jpg" alt="hiking" width=50%/> -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <form id="contact">
-            <div class="form-group">
-                <label for="name">What should I call you?</label>
-                <input type="text" class="form-control" />
+        <div class="card">
+            <div class="card-header">
+                <h3 class="card-title">Let's get in touch!</h3>
             </div>
-            <div class="form-group">
-                <label for="email">How may I reach you?</label>
-                <input type="text" class="form-control" />
+            <div class="card-body">
+                <form id="contact">
+                    <div class="form-group">
+                        <label for="name">What should I call you?</label>
+                        <input type="text" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="email">How may I reach you?</label>
+                        <input type="text" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Got a message for me?</label>
+                        <input type="text" class="form-control" />
+                    </div>
+                    <button class="btn btn-info" id="submit" type="submit">Contact</button>
+                </form>
+                <br/>
             </div>
-            <div class="form-group">
-                <label for="message">Got a message for me?</label>
-                <input type="text" class="form-control" />
-            </div>
-            <button id="submit" type="submit">Contact</button>
-        </form>
+        </div>
     </main>
     <footer>
         <span>Created by Skye Nguyen, 2018</span>
