--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="css/bootstrap.css" rel="stylesheet" text="css/text" media="all" />
     <link href="css/styles.css" rel="stylesheet" text="css/text" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Tinos|Flamenco|Sofia" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
 </head>
 
 <body>
@@ -34,7 +36,34 @@
             </div>
         </header>
     </div>
-
+    <div class="container-fluid carousel-container">
+        <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="img/dota.jpg" alt="First slide"/>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/hiking.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/makeup-unsplash.jpg" alt="Third slide" />
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+    </div>
     <main class="container-fluid">
         <div class="card" id="about-me">
             <div class="card-header">
