fix css link in index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Skye Nguyen</title>
-    <link href="css/bootstrap.css" rel="stylesheet" text="css/text" media="all" />
-    <link href="css/styles.css" rel="stylesheet" text="css/text" media="all" />
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Tinos|Flamenco|Sofia" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
@@ -309,7 +309,7 @@
         </div>
     </main>
     <footer>
-        <span>Created by Skye Nguyen, 2018</span>
+        <span>Copyright © 2018 <a href="https://skye.dames.es">Skye Nguyen</a>. All Rights Reserved.</span>
     </footer>
 </body>
 
