--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="img/dota.jpg" alt="First slide"/>
+                <img class="d-block w-100 carousel-img" src="img/animal-shelter.png" alt="animal shelter"/>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/hiking.jpg" alt="Second slide">
+                <img class="d-block w-100 carousel-img" src="img/marketplace.png" alt="market place">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/makeup-unsplash.jpg" alt="Third slide" />
+                <img class="d-block w-100 carousel-img" src="img/election-map.png" alt="election map" />
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
