--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid header-container">
         <header>
             <div class="header-title">
                 <h1>Skye Nguyen</h1>
@@ -35,34 +35,35 @@
                 </nav>
             </div>
         </header>
+        <hr class="style"> <hr class="style" id="secondLine"> 
     </div>
     <div class="container-fluid carousel-container">
         <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-              <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100 carousel-img" src="img/animal-shelter.png" alt="animal shelter"/>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100 carousel-img" src="img/marketplace.png" alt="market place">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100 carousel-img" src="img/election-map.png" alt="election map" />
-              </div>
+                <div class="carousel-item active">
+                    <img class="d-block w-100 carousel-img" src="img/animal-shelter.png" alt="animal shelter" />
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 carousel-img" src="img/marketplace.png" alt="market place">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 carousel-img" src="img/election-map.png" alt="election map" />
+                </div>
             </div>
             <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
             </a>
-          </div>
+        </div>
     </div>
     <main class="container-fluid">
         <div class="card" id="about-me">
@@ -228,57 +229,62 @@
                     <div class="card-header">
                         <h3 class="card-title">Hobbies</h3>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <span>Dota 2</span>
-                            <br>
-                            <img class="hobbies" src="img/dota.jpg" alt="dota 2 wallpaper" width=50%/>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <span>Dota 2</span>
+                                <br>
+                                <img class="hobbies" src="img/dota.jpg" alt="dota 2 wallpaper" width=50%/>
+                            </div>
+                            <div class="col-md-6">
+                                <span>Makeup</span>
+                                <br>
+                                <img class="hobbies" src="img/makeup-unsplash.jpg" alt="makeup bag" width=50%/>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <span>Makeup</span>
-                            <br>
-                            <img class="hobbies" src="img/makeup-unsplash.jpg" alt="makeup bag" width=50%/>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <span>Orangetheory Fitness</span>
+                                <br>
+                                <img class="hobbies" src="img/otf-logo.jpg" alt="otf logo" width=50%/>
+                            </div>
+                            <div class="col-md-6">
+                                <span>Hiking</span>
+                                <br>
+                                <img class="hobbies" src="img/hiking.jpg" alt="hiking" width=50%/>
+                            </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <span>Orangetheory Fitness</span>
-                            <br>
-                            <img class="hobbies" src="img/otf-logo.jpg" alt="otf logo" width=50%/>
-                        </div>
-                        <div class="col-md-6">
-                            <span>Hiking</span>
-                            <br>
-                            <img class="hobbies" src="img/hiking.jpg" alt="hiking" width=50%/>
-                        </div>
-                    </div>
+
                 </div>
                 <div class="col-md-6" id="interest">
                     <div class="card-header">
-                        <h3 class="card-title">Place Holder</h3>
+                        <h3 class="card-title">Social Media</h3>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <span>Place holder</span>
-                            <br>
-                            <!-- <img class="hobbies" src="img/dota.jpg" alt="dota 2 wallpaper" width=50%/> -->
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <span>LinkedIn</span>
+                                <br>
+                                <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin"/>
+                            </div>
+                            <div class="col-md-6">
+                                <span>GitHub</span>
+                                <br>
+                                <img class="contact" src="img/icons8-github-64.png" alt="github"/>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <span>Place holder</span>
-                            <br>
-                            <!-- <img class="hobbies" src="img/makeup-unsplash.jpg" alt="makeup bag" width=50%/> -->
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <span>Place holder</span>
-                            <br>
-                            <!-- <img class="hobbies" src="img/otf-logo.jpg" alt="otf logo" width=50%/> -->
-                        </div>
-                        <div class="col-md-6">
-                            <span>Place holder</span>
-                            <br>
-                            <!-- <img class="hobbies" src="img/hiking.jpg" alt="hiking" width=50%/> -->
+                        <div class="row">
+                            <div class="col-md-6">
+                                <span>E-mail</span>
+                                <br>
+                                <img class="contact" src="img/icons8-new-post-64.png" alt="email"/>
+                            </div>
+                            <div class="col-md-6">
+                                <span>Phone</span>
+                                <br>
+                                <img class="contact" src="img/icons8-cell-phone-64.png" alt="phone"/>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -309,7 +315,8 @@
         </div>
     </main>
     <footer>
-        <span>Copyright © 2018 <a href="https://skye.dames.es">Skye Nguyen</a>. All Rights Reserved.</span>
+        <span>Copyright © 2018
+            <a href="https://skye.dames.es">Skye Nguyen</a>. All Rights Reserved.</span>
     </footer>
 </body>
 
