--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 
 <body>
     <div id="splashscreen">
-        
-        <img src="img/clement-unsplash.jpg" width="100%" height ="60%"/>
-
-        <a href="#" class="enter_link">Enter on the website</a>
+        <div id="profileSplash"></div>
+        <a href="#" class="enter_link">View My Work</a>
     </div>
     <div class="container-fluid header-container">
         <header>
