style splash screen

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
 <body>
     <div id="splashscreen">
-        
-        <a href="#" class="enter_link">View My Work</a>
-        <div id="profileSplash"></div>
+          
+        <div id="profileSplash">
+            <h1>Skye Nguyen</h1>
+            <a href="#" class="enter_link">View My Work</a>
+        </div>
     </div>
     <div class="container-fluid header-container">
         <header>
