delete some unnecessary images

--- a/index.html
+++ b/index.html
@@ -13,10 +13,31 @@
 
 <body>
     <div id="splashscreen">
-          
         <div id="profileSplash">
             <h1>Skye Nguyen</h1>
+            <p>Web Developer</p>
             <a href="#" class="enter_link">View My Work</a>
+            <div class="row splash-row">
+                <div class="col-md-3">
+                    <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
+                        <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin" />
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="https://github.com/sn31" target="_blank">
+                        <img class="contact" src="img/icons8-github-64.png" alt="github" />
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="mailto:skye@dames.es">
+                        <img class="contact" src="img/icons8-new-post-64.png" alt="email" />
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#"></a>
+                    <img class="contact" src="img/icons8-resume-64.png" alt="resume" />
+                </div>
+            </div>
         </div>
     </div>
     <div class="container-fluid header-container">
