--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Skye Nguyen</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Tinos|Flamenco|Sofia" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Tinos|Flamenco|Sofia|Black+Ops+One|Bungee+Shade" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/anime.min.js"></script>
@@ -15,14 +15,7 @@
 <body>
     <div id="splashscreen">
         <div class="container" id="profileSplash">
-
-            <h1 class="ml5">
-                <span class="text-wrapper">
-                    <span class="line line1"></span>
-                    <span class="letters">Skye Nguyen</span>
-                    <span class="line line2"></span>
-                </span>
-            </h1>
+            <h1 class="title-splash">Skye Nguyen</h1>
             <p>Web Developer</p>
             <div class="row splash-row">
                 <div class="col-md-3">
