change splash screen background color

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <div id="splashscreen">
-        <div class="container" id="profileSplash">
+    <div class="container-fluid" id="splashscreen">
+        <div id="profileSplash">
             <h1 class="title-splash">Skye Nguyen</h1>
             <p>Web Developer</p>
             <div class="row splash-row">
