style splash screen description line

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Skye Nguyen</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Tinos|Flamenco|Sofia|Black+Ops+One|Bungee+Shade" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Tinos|Flamenco|Sofia|Black+Ops+One|Bungee+Shade"
+        rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/anime.min.js"></script>
@@ -16,7 +17,12 @@
     <div class="container-fluid" id="splashscreen">
         <div id="profileSplash">
             <h1 class="title-splash">Skye Nguyen</h1>
-            <p>Web Developer</p>
+            <h5 class="ml11 enter_link">
+                <span class="text-wrapper">
+                    <span class="line line1"></span>
+                    <span class="letters">Web Developer</span>
+                </span>
+            </h5>
             <div class="row splash-row">
                 <div class="col-md-3">
                     <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
@@ -39,7 +45,7 @@
                 </div>
             </div>
         </div>
-        <a id="enterArro" href="#" class="enter_link">View My Work</a>
+
     </div>
     <div class="container-fluid header-container">
         <header>
