--- a/index.html
+++ b/index.html
@@ -17,35 +17,15 @@
     <div class="container-fluid" id="splashscreen">
         <div id="profileSplash">
             <h1 class="title-splash">Skye Nguyen</h1>
-            <h5 class="ml11 enter_link">
+            <h5 class="ml11">
                 <span class="text-wrapper">
                     <span class="line line1"></span>
                     <span class="letters">Web Developer</span>
                 </span>
             </h5>
-            <div class="row splash-row">
-                <div class="col-md-3">
-                    <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
-                        <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin" />
-                    </a>
-                </div>
-                <div class="col-md-3 container">
-                    <a href="https://github.com/sn31" target="_blank">
-                        <img class="contact" src="img/icons8-github-64.png" alt="github" />
-                    </a>
-                </div>
-                <div class="col-md-3">
-                    <a href="mailto:skye@dames.es">
-                        <img class="contact" src="img/icons8-new-post-64.png" alt="email" />
-                    </a>
-                </div>
-                <div class="col-md-3">
-                    <a href="#"></a>
-                    <img class="contact" src="img/icons8-resume-64.png" alt="resume" />
-                </div>
-            </div>
+            <br>
         </div>
-
+        <button class="enter_link btn">View My Work</button>
     </div>
     <div class="container-fluid header-container">
         <header>
@@ -74,34 +54,6 @@
         <hr class="style">
         <hr class="style" id="secondLine">
     </div>
-    <!-- <div class="container carousel-container" id="myCarousel">
-        <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100 carousel-img" src="img/animal-shelter.png" alt="animal shelter" />
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 carousel-img" src="img/flash-card.png" alt="market place">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 carousel-img" src="img/election-map.png" alt="election map" />
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div> -->
     <main class="container-fluid">
         <div class="card" id="about-me">
             <div class="card-header">
