--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </h5>
             <br>
         </div>
-        <button class="enter_link btn">View My Work</button>
+        <button class="enter_link btn raise">View My Work</button>
     </div>
     <div class="container-fluid header-container">
         <header>
@@ -244,68 +244,71 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card-header">
+                        <h3 class="card-title">Let's get in touch!</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-2" id="socialMedia">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
+                                            <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin" />
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <a href="https://github.com/sn31" target="_blank">
+                                            <img class="contact" src="img/icons8-github-64.png" alt="github" />
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <a href="mailto:skye@dames.es">
+                                            <img class="contact" src="img/icons8-new-post-64.png" alt="email" />
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <a href="#"></a>
+                                        <img class="contact" src="img/icons8-resume-64.png" alt="resume" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-10">
+                                <form id="contact">
+                                    <div class="form-group">
+                                        <div class="form-row">
+                                            <div class="col-md-6">
+                                                <input type="text" class="form-control" placeholder="First name">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <input type="text" class="form-control" placeholder="Last name">
+                                            </div>
+                                        </div>
+                                        <br>
+                                        <input type="text" class="form-control" placeholder="Email">
+                                        <br>
+                                        <input type="text" class="form-control" placeholder="Message">
+                                    </div>
+                                    <button class="btn btn-info" id="submit" type="submit">Contact</button>
+                                </form>
+                                <br>
+                            </div>
 
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-header">
-                <h3 class="card-title">Let's get in touch!</h3>
-            </div>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-9">
-                        <form id="contact">
-                            <div class="form-group">
-                                <label for="name">What should I call you?</label>
-                                <input type="text" class="form-control" />
-                            </div>
-                            <div class="form-group">
-                                <label for="email">How may I reach you?</label>
-                                <input type="text" class="form-control" />
-                            </div>
-                            <div class="form-group">
-                                <label for="message">Got a message for me?</label>
-                                <input type="text" class="form-control" />
-                            </div>
-                            <button class="btn btn-info" id="submit" type="submit">Contact</button>
-                        </form>
-                        <br>
-                    </div>
-                    <div class="col-md-3" id="interest">
-                        <div class="card-header">
-                            <h3 class="card-title">Social Media</h3>
-                        </div>
 
-                        <div class="row">
-                            <div class="col-md-6">
-                                <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
-                                    <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin" />
-                                </a>
-                            </div>
-                            <div class="col-md-6">
-                                <a href="https://github.com/sn31" target="_blank">
-                                    <img class="contact" src="img/icons8-github-64.png" alt="github" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <a href="mailto:skye@dames.es">
-                                    <img class="contact" src="img/icons8-new-post-64.png" alt="email" />
-                                </a>
-                            </div>
-                            <div class="col-md-6">
-                                <a href="#"></a>
-                                <img class="contact" src="img/icons8-resume-64.png" alt="resume" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </main>
-    <footer>
+    <footer class="container-fluid">
         <span>Copyright © 2018
             <a href="https://skye.dames.es">Skye Nguyen</a>. All Rights Reserved.</span>
     </footer>
