--- a/index.html
+++ b/index.html
@@ -53,7 +53,35 @@
         </header>
         <hr class="style">
         <hr class="style" id="secondLine">
+        <div class="container carousel-container" id="myCarousel">
+                <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100 carousel-img" src="img/animal-shelter.png" alt="animal shelter" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100 carousel-img" src="img/flash-card.png" alt="flashcard">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100 carousel-img" src="img/election-map.png" alt="election map" />
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
     </div>
+
     <main class="container-fluid">
         <div class="card" id="about-me">
             <div class="card-header">
