remove all card header and fix background size

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </header>
         <hr class="style">
         <hr class="style" id="secondLine">
-        <div class="container carousel-container" id="myCarousel">
+        <!-- <div class="container carousel-container" id="myCarousel">
             <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -81,13 +81,13 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-        </div>
+        </div> -->
 
         <main class="container-fluid">
             <div class="card" id="about-me">
-                <div class="card-header">
+                
                     <h3 class="card-title">About Me</h3>
-                </div>
+               
                 <div class="card-body">
                     <img src="img/profile.jpg" alt="profile picture" width=50% id="profile" />
                     <div id="about-me-float">
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="card" id="projects">
-                <div class="card-header">
+                <div class=" ">
                     <h3 class="card-title">Projects</h3>
                 </div>
                 <div class="card-body">
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="card" id="background">
-                <div class="card-header">
+                <div class=" ">
                     <h3 class="card-title">Background</h3>
                 </div>
                 <div class="card-body">
@@ -245,7 +245,7 @@
             <div class="card hobbies-card" id="hobbies">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="card-header">
+                        <div class=" ">
                             <h3 class="card-title">Hobbies</h3>
                         </div>
                         <div class="card-body">
@@ -276,7 +276,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="card-header">
+                        <div class=" ">
                             <h3 class="card-title">Let's get in touch!</h3>
                         </div>
                         <div class="card-body">
