combine resume.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Skye Nguyen</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Tinos|Flamenco|Sofia|Black+Ops+One|Bungee+Shade"
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Muli|Flamenco|Sofia|Black+Ops+One|Bungee+Shade"
         rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
@@ -53,7 +53,6 @@
             </div>
         </header>
         <hr class="style">
-        <hr class="style" id="secondLine">
         <!-- <div class="container carousel-container" id="myCarousel">
             <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
