add resume.html to resume icon

--- a/index.html
+++ b/index.html
@@ -304,8 +304,9 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <a href="#"></a>
+                                            <a href="./resume.html">
                                             <img class="contact" src="img/icons8-resume-64.png" alt="resume" />
+                                        </a>
                                         </div>
                                     </div>
                                 </div>
